<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_menu_item_1"
            android:icon="@drawable/ic_baseline_all_inbox_24"
            android:title="@string/menu_item_1" />
        <item
            android:id="@+id/nav_menu_item_2"
            android:icon="@drawable/ic_menu_settings_24"
            android:title="@string/menu_item_2" />
        <item
            android:id="@+id/nav_menu_item_3"
            android:icon="@drawable/ic_menu_task_alt_24"
            android:title="@string/menu_item_3" />
        <item
            android:id="@+id/nav_menu_item_4"
            android:icon="@drawable/ic_baseline_article_24"
            android:title="@string/menu_item_4" />
    </group>
</menu>