<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.a2h.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu_item_1"
        android:name="com.example.a2h.ui.menuItem1.MenuItem1Fragment"
        android:label="@string/menu_item_1"
        tools:layout="@layout/fragment_menu_item_1" />

    <fragment
        android:id="@+id/nav_menu_item_2"
        android:name="com.example.a2h.ui.menuItem2.MenuItem2Fragment"
        android:label="@string/menu_item_2"
        tools:layout="@layout/fragment_menu_item_2" />
    <fragment
        android:id="@+id/nav_menu_item_3"
        android:name="com.example.a2h.ui.menuItem3.MenuItem3Fragment"
        android:label="@string/menu_item_3"
        tools:layout="@layout/fragment_menu_item_3" />
    <fragment
        android:id="@+id/nav_menu_item_4"
        android:name="com.example.a2h.ui.menuItem4.MenuItem4Fragment"
        android:label="@string/menu_item_4"
        tools:layout="@layout/fragment_menu_item_4" />
</navigation>